--- a/styles.css
+++ b/styles.css
@@ -40,4 +40,12 @@
          background: transparent;
          transition: border-color 0.2s;
        }      
+p{
+  font-size: larger;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: blueviolet;
+}
+#answerbox{
+  border: brown solid 2px;
  
+}
