--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
     background-color: green;
     
     }
+    body{
+      background-color: yellow;
+    }
 #calculate_now:hover {
        background-color: orange;
        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -13,10 +16,15 @@
        }
        #mainbody{
            border: 2px solid black;
-           
            width: 100%;
        }
-
+.left{
+  width: 50%;
+}
+.right{
+  width: 50%;
+  border: dotted 2px black;
+}
        $primary: #11998e;
        $secondary: #38ef7d;
        $white: #fff;
@@ -45,7 +53,14 @@ p{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: blueviolet;
 }
-#answerbox{
-  border: brown solid 2px;
- 
+.circlebox{
+  border: 3px dotted black;
+}
+.answerbox{
+  border: 3px dotted black;
+}
+canvas{
+  width : "100%";
+   height :"100%";
+  border: 3px dotted black;
 }
