--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,19 @@
 }
 
 .textbox{
-  background-color: white;
+  background-color: #ffffff;
+  border-radius: 15px;
+  margin-left: 50px;
+}
+.name{
+  font-size: xx-large;
 }
 #calculate_now {
     background-color: green;
+    width: 100%;
+    height: 40px;
+    font-size: x-large;
+    border-radius: 12px;
     
     }
     body{
@@ -22,7 +31,7 @@
            width: 100%;
        }
 .left{
-  width: 50%;
+  width: 20%;
 }
 .right{
   width: 50%;
@@ -60,7 +69,6 @@ p{
   border: 3px dotted black;
 }
 canvas{
-  width : "100%";
-   height :"100%";
+
   border: 3px dotted black;
 }
