--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,91 @@
-#heading{
-    text-align: center;
+#heading {
+  text-align: center;
 }
 
-.textbox{
+.textbox {
   background-color: #ffffff;
   border-radius: 15px;
   margin-left: 50px;
 }
-.name{
+
+.name {
   font-size: xx-large;
 }
+
 #calculate_now {
-    background-color: green;
-    width: 100%;
-    height: 40px;
-    font-size: x-large;
-    border-radius: 12px;
-    
-    }
-    body{
-      background-color: yellow;
-    }
+  background-color: green;
+  width: 100%;
+  height: 40px;
+  font-size: x-large;
+  border-radius: 12px;
+}
+
+body {
+  background-color: yellow;
+}
+
 #calculate_now:hover {
-       background-color: orange;
-       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-       cursor: pointer;
-       }
-       #mainbody{
-           border: 2px solid black;
-           width: 100%;
-       }
-.left{
+  background-color: orange;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
+}
+
+#mainbody {
+  border: 2px solid black;
+  width: 100%;
+}
+
+.left {
   width: 20%;
 }
-.right{
+
+.right {
   width: 50%;
-  border: dotted 2px black;
+  border: 0px;
 }
-     
-       .form_group {
-         position: relative;
-         padding: 15px 0 0;
-         margin-top: 10px;
-         width: 50%;
-       }
-       
-       .textbox {
-         font-family: inherit;
-         width: 100%;
-         border: 1;
-         border-bottom: 2px solid $gray;
-         outline: 0;
-         font-size: 1.3rem;
-         color: $white;
-         padding: 7px 0;
-         background: transparent;
-         transition: border-color 0.2s;
-       }      
-p{
+
+.form_group {
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+  width: 50%;
+}
+
+.textbox {
+  font-family: inherit;
+  width: 100%;
+
+  border-bottom: 2px solid $gray;
+  outline: 0;
+  font-size: 1.3rem;
+ 
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+footer {
+  color: #012531; 
+  font-family: sans-serif;
+  text-align: center;
+}
+footer:hover{
+ font-size: x-large;
+}
+
+p {
   font-size: larger;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: blueviolet;
 }
-.circlebox{
-  border: 3px dotted black;
-}
-.answerbox{
-  border: 3px dotted black;
-}
-canvas{
 
+.circlebox {
+  border: 3px dotted black;
+}
+
+.answerbox {
+  border: 3px dotted black;
+}
+
+canvas {
   border: 3px dotted black;
 }
