--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,16 @@
 #heading {
   text-align: center;
+  color: #100150;
+}
+
+h3 {
+  color: #100150;
+  font-family: 'comic sans ms';
+  text-align: center;
+}
+
+hr {
+  color: #0f0cda;
 }
 
 .textbox {
@@ -7,18 +18,13 @@
   border-radius: 15px;
   margin-left: 50px;
 }
-.ins{
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-style: normal;
-  text-color: red;
- text-align: center;
-}
+
 .name {
   font-size: xx-large;
 }
 
 #calculate_now {
-  background-color: green;
+  background-color: rgb(49, 79, 209);
   width: 100%;
   height: 40px;
   font-size: x-large;
@@ -26,11 +32,11 @@
 }
 
 body {
-  background-color: pink;
+  background-color: #7cabf3;
 }
 
 #calculate_now:hover {
-  background-color: orange;
+  background-color: rgb(79, 103, 207);
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 }
@@ -59,38 +65,47 @@ body {
 .textbox {
   font-family: inherit;
   width: 100%;
-
   border-bottom: 2px solid $gray;
   outline: 0;
   font-size: 1.3rem;
- 
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s;
 }
+
 footer {
-  color: #012531; 
+  color: #012531;
   font-family: sans-serif;
   text-align: center;
 }
-footer:hover{
- font-size: x-large;
+
+footer:hover {
+  font-size: x-large;
 }
 
 p {
   font-size: larger;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: blueviolet;
+  color: rgb(37, 5, 128);
 }
 
-.circlebox {
-  border: 3px dotted black;
+.answertable {
+  border-width: 300px;
+  border: red 2px solid;
+  border-radius: 5px;
+  animation: mymove 1s infinite;
 }
 
-.answerbox {
-  border: 3px dotted black;
+@keyframes mymove {
+  from {
+    border-color: #7cabf3;
+  }
+  to {
+    border-color: rgb(12, 14, 146);
+  }
 }
 
 canvas {
-  border: 3px dotted black;
+  border: 1px solid black;
+  border-radius: 25px;
 }
